--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
           rel="stylesheet">
-    <link rel="icon" type="image/png" sizes="32x32" href="public/images/favicon-32x32.png">
-    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="stylesheet" href="styles/main.css">
     <title>Frontend Mentor | Four card feature section</title>
 </head>
 <body>
@@ -29,7 +29,7 @@
             Monitors activity to identify project roadblocks
         </p>
         <picture>
-            <img src="public/images/icon-supervisor.svg" alt="Supervisor" width="64" height="64">
+            <img src="images/icon-supervisor.svg" alt="Supervisor" width="64" height="64">
         </picture>
     </article>
 
@@ -39,7 +39,7 @@
             Scans our talent network to create the optimal team for your project
         </p>
         <picture>
-            <img src="public/images/icon-team-builder.svg" alt="Team builder" width="64" height="64">
+            <img src="images/icon-team-builder.svg" alt="Team builder" width="64" height="64">
         </picture>
     </article>
 
@@ -49,7 +49,7 @@
             Regularly evaluates our talent to ensure quality
         </p>
         <picture>
-            <img src="public/images/icon-karma.svg" alt="Karma" width="64" height="64">
+            <img src="images/icon-karma.svg" alt="Karma" width="64" height="64">
         </picture>
     </article>
 
@@ -59,7 +59,7 @@
             Uses data from past projects to provide better delivery estimates
         </p>
         <picture>
-            <img src="public/images/icon-calculator.svg" alt="Calculator" width="64" height="64">
+            <img src="images/icon-calculator.svg" alt="Calculator" width="64" height="64">
         </picture>
     </article>
 </main>
